<resources>
    <string name="app_name">Run Tracker</string>
    <string name="email_login_hint">Email address</string>
    <string name="password_login_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="tag_line">An app by Dustin Runkel</string>
    <string name="create_user">Create an account</string>
    <string name="pass_reenter">Re-enter password</string>
    <string name="user_name">Name</string>
    <string name="user_create">Create Account</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="add_a_run">Add a Run</string>
    <string name="data">Data</string>
    <string name="data_management">Data Management</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_run_text">Add a Run</string>
    <string name="add_a_date">Edit Date</string>
    <string name="edit_pace">Edit Pace</string>
    <string name="add_run">Add Run</string>
    <string name="save">Save</string>
    <string name="update_run">Update Run</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>