<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/create_user"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/create_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/user_name"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:maxLines="1" />
    <EditText
        android:id="@+id/create_account_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:autofillHints="emailAddress"
        android:hint="@string/email_login_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1" />
    <EditText
        android:id="@+id/create_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:autofillHints="password"
        android:hint="@string/password_login_hint"
        android:inputType="textPassword"
        android:maxLines="1" />
    <EditText
        android:id="@+id/create_account_password_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:autofillHints="password"
        android:hint="@string/pass_reenter"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionDone" />
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/user_create" />
    <ImageButton
        android:id="@+id/b_back"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/arrow_back_fill0_wght200_grad0_opsz24"
        android:backgroundTint="@color/half_baked"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:text="@string/back"
        />
</LinearLayout>